fixed text overlap issue

--- a/src/index.css
+++ b/src/index.css
@@ -819,6 +819,13 @@ h2 {
   transform: scale(1.3);
 }
 
+.swal2-container,
+.swal2-container,
+.swal2-center,
+.swal2-popup {
+  width: inherit; 
+} 
+
 /* Meetings and IndividualMeetings */
 
 .meetingsContainer h2 {
@@ -887,8 +894,19 @@ h3 {
   background-color: #000d54;
 }
 
+/* MEDIA QUERIES */
+
+@media (max-width: 460px) {
+  .flexFrom {
+    margin-top: 2rem; 
+  }
+}
 
 @media screen and (max-width: 384px), screen and (max-height: 854px) {
+
+  h1 {
+    margin-top: 2.5rem; 
+  }
   .newMeetingSection {
     justify-content: space-evenly;
   }
@@ -936,9 +954,8 @@ h3 {
   }
 }
 @media screen and (max-width: 384px) {
+
   .newMeeting p {
-    
-    
     font-size: 1.1rem;
   }
   .newMeetingForm label {
